# bol-tts-marathi

./: .gitignore  AGENTS.md  LICENSE  NOTICE  README.md  pyproject.toml
configs/: config_marathi_ft.yml  config_mr.json  voice_speeds.json
docs/: ARCHITECTURE.md  DATA_PREPARATION.md  INFERENCE.md  PUBLISHING.md  README.md  RESEARCH_LANGUAGE_CONDITIONING.md  SETUP.md  STAGE_2_5.md  TRAINING_GUIDE.md  TROUBLESHOOTING.md  VOICEPACKS.md
experiments/v0_4_lang_conditioning/: README.md
experiments/v0_4_lang_conditioning/configs/: config_marathi_v0_4_langcond.yml  config_marathi_v0_4_smoke.yml
experiments/v0_4_lang_conditioning/data/: .gitignore
experiments/v0_4_lang_conditioning/kokoro_patches/: 01_lang_ids_forward.patch  README.md
experiments/v0_4_lang_conditioning/notes/: FULL_RUN_RUNBOOK.md  SMOKE_TEST_RUNBOOK.md
experiments/v0_4_lang_conditioning/scripts/: auto_eval_loop.sh  (+9 more)
hf_model/: README.md
hf_space/: README.md  app.py  requirements.txt
scripts/: build_bundles.py  convert_kokoro_weights.py  export_onnx.py  extract_voicepacks_mr.py  fix_config_and_relaunch.py  inference_mac_mr.py  launch_training.sh  pick_ivr_voices.py  post_stage1_handoff.sh  push_to_hf.sh  quantize_onnx.py  stage2_auto_monitor.sh  trim_leading_silence.py  trim_silence.py  with_timestamps.py
scripts/data_prep/: filter_by_duration.py  fix_speaker_ids.py  generate_ood_marathi.py  merge_manifests.py  prepare_indictts_marathi.py  prepare_indicvoices_r_mr.py  prepare_rasa_mr.py
scripts/diagnostics/: check_ipa_lengths.py  diagnose_data.py  diagnose_nan.py
scripts/upstream/: extract_voicepack.py  test_inference.py
training/: OOD_texts.txt  README.md  kokoro_symbols.py  kokoro_tb_utils_mr.py
(+2 files in other folders)
